--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-svg": "^13.4.0",
     "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
