--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "expo": "~48.0.5",
     "expo-camera": "^13.2.1",
     "expo-image-picker": "^14.1.1",
     "expo-status-bar": "~1.4.4",
+    "mime": "^3.0.0",
     "react": "18.2.0",
-<<<<<<< HEAD
     "react-native": "0.71.7",
-=======
-    "react-native": "0.71.4",
     "react-native-chart-kit": "^6.12.0",
->>>>>>> cf393705f56d83d047499b6fd53a8659c6089f40
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "^13.4.0",
-    "react-native-toast-message": "^2.1.6"
+    "react-native-toast-message": "^2.1.6",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
